# Mailing_List_Management_Service

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
fixture/: blog.json  groups.json  message.json  users.json
message/: admin.py  forms.py  models.py  services.py  servises.py  urls.py  views.py
message/migrations/: 0001_initial.py  0002_rename_clients_client.py  0003_alter_client_name.py  0004_alter_message_body_letter_alter_message_title_letter.py  0005_alter_message_body_letter_alter_message_title_letter.py  0006_alter_attempt_status_alter_mailinglist_periodicity_and_more.py  0007_alter_attempt_status.py  0008_alter_attempt_date_time_last_attempt.py  0009_alter_attempt_mail_server_response.py  0010_mailinglist_date_and_time_of_sending.py  0011_alter_mailinglist_date_and_time_of_sending.py  0012_mailinglist_next_date.py  0013_client_owner_mailinglist_owner_message_owner.py  0014_alter_mailinglist_options.py  0015_alter_mailinglist_options.py  0016_alter_mailinglist_options.py  0017_alter_mailinglist_options.py  0018_alter_attempt_options_alter_client_options_and_more.py
message/templates/message/: base.html  client_detail.html  client_form.html  client_list.html  home_page.html  mailinglist_detail.html  (+6 more)
message/templatetags/: my_tags1.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_options.py  0004_alter_user_options.py
users/templatetags/: my_tags.py
(+9 files in other folders)
